[gd_scene load_steps=2 format=3 uid="uid://b1ocud8osfbsj"]

[ext_resource type="Script" path="res://scripts/win.gd" id="1_oamjr"]

[node name="Win" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oamjr")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.952941, 0.745098, 0.890196, 0.635294)

[node name="GoodJob" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -464.0
offset_top = -136.5
offset_right = 464.0
offset_bottom = 136.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 200
text = "Good Job!"
horizontal_alignment = 1

[node name="FinalScore" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -0.5
offset_top = -383.0
offset_right = 0.5
offset_bottom = -300.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 60

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.01
anchor_top = 0.02
anchor_right = 0.05
anchor_bottom = 0.02
offset_right = 0.999999
offset_bottom = 55.0
theme_override_font_sizes/font_size = 40

[node name="debug_prg" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="debug_spd" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 800.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Reset" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "   Reset   "

[node name="Quit" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "   Quit   "

[connection signal="pressed" from="HBoxContainer/Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="HBoxContainer/Quit" to="." method="_on_quit_pressed"]
